improve the code and optimize the redudant queries to the database